# shit

./: CMakeLists.txt  speech.csv
include/: speaker.h  speech.h  speechmanager.h
src/: main.cpp  speech.cpp  speech_manager.cpp
